Commit for demo

--- a/pom.xml
+++ b/pom.xml
@@ -111,11 +111,6 @@
 			<artifactId>jackson-annotations</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>		
-		<dependency>
-		    <groupId>com.oracle</groupId>
-		    <artifactId>ojdbc14</artifactId>
-		    <version>10.2.0.4.0</version>
-		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
 		<dependency>
@@ -309,4 +304,12 @@
 		</plugins>
 	
 	</build>
+	<repositories>
+	<repository>
+		<id>mesir-repo</id>
+		<url>http://mesir.googlecode.com/svn/trunk/mavenrepo</url>
+	</repository>
+</repositories>
+
+
 </project>
