--- a/pom.xml
+++ b/pom.xml
@@ -236,74 +236,22 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>NiceId</groupId>
+			<artifactId>NiceId</artifactId>
+			<version>1.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/NiceID.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>IPIN</groupId>
+			<artifactId>IPIN</artifactId>
+			<version>1.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/IPINClient.jar</systemPath>
+		</dependency>
 	</dependencies>
-	<build>
-		<finalName>${project.artifactId}</finalName>
 	
-		<resources>
-			<resource>
-				<directory>${project.build.sourceDirectory}</directory>
-				<includes>
-					<include>**/*.xml</include>
-				</includes>
-			</resource>
-			<resource>
-				<directory>src/main/resources</directory>
-			</resource>
-		</resources>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<inherited>true</inherited>
-				<version>2.3.2</version>
-				<configuration>
-					<fork>true</fork>
-					<source>1.7</source>
-					<target>1.7</target>
-					<optimize>true</optimize>
-					<encoding>UTF-8</encoding>
-					<executable>/usr/local/jdk8/bin/javac</executable>
-					<compilerVersion>1.7</compilerVersion>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>2.4</version>
-				<configuration>
-					<failOnMissingWebXml>false</failOnMissingWebXml>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>run</goal>
-						</goals>
-						<configuration>
-							<tasks>
-								<copy
-									file="${basedir}/src/main/resources/profiles/${deployTarget}/logback.xml"
-									tofile="${project.build.outputDirectory}/logback.xml" overwrite="true"
-									failonerror="false" />
-								<copy
-									file="${basedir}/src/main/resources/profiles/${deployTarget}/resources.xml"
-									tofile="${project.build.outputDirectory}/resources.xml" overwrite="true"
-									failonerror="false" />
-								<copy
-									file="${basedir}/src/main/resources/profiles/${deployTarget}/jdbc.xml"
-									tofile="${project.build.outputDirectory}/jdbc.xml" overwrite="true"
-									failonerror="false" />
-							</tasks>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	
-	</build>
 	<repositories>
 	<repository>
 		<id>mesir-repo</id>
